--- a/index.html
+++ b/index.html
@@ -293,35 +293,34 @@
                 var photoImage = new Image();
                 photoImage.src = e.target.result;
                 photoImage.onload = () => {
+                    var photoWidth = photoImage.width;
+                    var photoHeight = photoImage.height;
+
                     if (parseInt($('#zoom-select').val()) == 2) {
-                        photoCanvas.width = photoImage.width * 2;
-                        photoCanvas.height = photoImage.height * 2 + 614;
-
-                        photoCtx.fillStyle = 'white';
-                        photoCtx.fillRect(0, 0, photoCanvas.width, photoCanvas.height);
-                        photoCtx.drawImage(photoImage, 0, 0, photoImage.width * 2, photoImage.height * 2);
-                    } else {
-                        photoCanvas.width = photoImage.width;
-                        photoCanvas.height = photoImage.height + 614;
-
-                        photoCtx.fillStyle = 'white';
-                        photoCtx.fillRect(0, 0, photoCanvas.width, photoCanvas.height);
-                        photoCtx.drawImage(photoImage, 0, 0);
+                        photoWidth = photoWidth * 2;
+                        photoHeight = photoHeight * 2;
                     }
+
+                    photoCanvas.width = photoWidth;
+                    photoCanvas.height = photoHeight + 614;
+
+                    photoCtx.fillStyle = 'white';
+                    photoCtx.fillRect(0, 0, photoCanvas.width, photoCanvas.height);
+                    photoCtx.drawImage(photoImage, 0, 0, photoWidth, photoHeight);
 
                     var specLength = $('#lens-input').val().length;
 
                     photoCtx.font = 'bold 120px MiSans';
                     photoCtx.fillStyle = 'black';
-                    photoCtx.fillText($('#device-input').val(), 200, photoImage.height + 282);
+                    photoCtx.fillText($('#device-input').val(), 200, photoHeight + 282);
                     //photoCtx.fillText($('#lens-input').val(), photoImage.width - 1820, photoImage.height + 282);
-                    photoCtx.fillText($('#lens-input').val(), photoImage.width - 74 * specLength, photoImage.height + 282);
+                    photoCtx.fillText($('#lens-input').val(), photoWidth - 74 * specLength, photoHeight + 282);
 
                     photoCtx.font = 'normal 82px MiSans';
                     photoCanvas.style.letterSpacing = '1px';
                     photoCtx.fillStyle = '#727272';
-                    photoCtx.fillText($('#time-input').val(), 200, photoImage.height + 434);
-                    photoCtx.fillText($('#location-input').val(), photoImage.width - 74 * specLength, photoImage.height + 434);
+                    photoCtx.fillText($('#time-input').val(), 200, photoHeight + 434);
+                    photoCtx.fillText($('#location-input').val(), photoWidth - 74 * specLength, photoHeight + 434);
 
                     if (parseInt($('#logo-select').val()) > 0) {
                         var logoImage = new Image();
@@ -338,10 +337,10 @@
                         }
 
                         logoImage.onload = () => {
-                            photoCtx.drawImage(logoImage, photoImage.width - 74 * specLength - 430, photoImage.height + 190, 250, 250);
+                            photoCtx.drawImage(logoImage, photoWidth - 74 * specLength - 430, photoHeight + 190, 250, 250);
 
-                            photoCtx.moveTo(photoImage.width - 74 * specLength - 80, photoImage.height + 190);
-                            photoCtx.lineTo(photoImage.width - 74 * specLength - 80, photoImage.height + 440);
+                            photoCtx.moveTo(photoWidth - 74 * specLength - 80, photoHeight + 190);
+                            photoCtx.lineTo(photoWidth - 74 * specLength - 80, photoHeight + 440);
                             photoCtx.lineWidth = 10;
                             photoCtx.strokeStyle = '#cccccc';
                             photoCtx.stroke();
