--- a/index.html
+++ b/index.html
@@ -91,16 +91,20 @@
                 </select>
             </div>
             <div class="mdui-textfield">
-                <input id="device-input" class="mdui-textfield-input" type="text" placeholder="Device name" readonly />
+                <label class="mdui-textfield-label"><script>document.write(getI18n('device_name'))</script></label>
+                <input id="device-input" class="mdui-textfield-input" type="text" readonly />
             </div>
             <div class="mdui-textfield">
-                <input id="time-input" class="mdui-textfield-input" type="text" placeholder="Time" readonly />
+                <label class="mdui-textfield-label"><script>document.write(getI18n('time'))</script></label>
+                <input id="time-input" class="mdui-textfield-input" type="text" readonly />
             </div>
             <div class="mdui-textfield">
-                <input id="lens-input" class="mdui-textfield-input" type="text" placeholder="Lens info" readonly />
+                <label class="mdui-textfield-label"><script>document.write(getI18n('lens_info'))</script></label>
+                <input id="lens-input" class="mdui-textfield-input" type="text" readonly />
             </div>
             <div class="mdui-textfield">
-                <input id="location-input" class="mdui-textfield-input" type="text" placeholder="Location" readonly />
+                <label class="mdui-textfield-label"><script>document.write(getI18n('location'))</script></label>
+                <input id="location-input" class="mdui-textfield-input" type="text" readonly />
             </div>
             <div class="mdui-typo">
                 <a onclick="getLocation()" style="cursor: pointer;">
