--- a/index.html
+++ b/index.html
@@ -90,28 +90,20 @@
                     <option value="2">2x</option>
                 </select>
             </div>
-            <div class="mdui-textfield">
-                <label class="mdui-textfield-label mdui-textfield-floating-label">
-                    <script>document.write(getI18n('device_name'))</script>
-                </label>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label"><script>document.write(getI18n('device_name'))</script></label>
                 <input id="device-input" class="mdui-textfield-input" type="text" readonly />
             </div>
-            <div class="mdui-textfield">
-                <label class="mdui-textfield-label mdui-textfield-floating-label">
-                    <script>document.write(getI18n('time'))</script>
-                </label>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label"><script>document.write(getI18n('time'))</script></label>
                 <input id="time-input" class="mdui-textfield-input" type="text" readonly />
             </div>
-            <div class="mdui-textfield">
-                <label class="mdui-textfield-label mdui-textfield-floating-label">
-                    <script>document.write(getI18n('lens_info'))</script>
-                </label>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label"><script>document.write(getI18n('lens_info'))</script></label>
                 <input id="lens-input" class="mdui-textfield-input" type="text" readonly />
             </div>
-            <div class="mdui-textfield">
-                <label class="mdui-textfield-label mdui-textfield-floating-label">
-                    <script>document.write(getI18n('location'))</script>
-                </label>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label"><script>document.write(getI18n('location'))</script></label>
                 <input id="location-input" class="mdui-textfield-input" type="text" readonly />
             </div>
             <div class="mdui-typo">
