--- a/index.html
+++ b/index.html
@@ -99,77 +99,79 @@
                 </div>
                 <div class="mdui-col">
                     <div class="mdui-textfield">
-                        <label class="mdui-textfield-label">Fonts</label>
+                        <label class="mdui-textfield-label">
+                            <script>document.write(getI18n('fonts'))</script>
+                        </label>
                         <select id="font-select" class="mdui-select mdui-textfield-input">
                             <option class="mi-sans" value="1">MiSans</option>
-                            <option class="harmony-sans" value="2" disabled>HarmonyOS Sans</option>
+                            <option class="harmony-sans" value="2">HarmonyOS Sans</option>
                         </select>
                     </div>
                 </div>
             </div>
+            <div class="mdui-textfield">
+                <label class="mdui-textfield-label">
+                    <script>document.write(getI18n('image_scale'))</script>
+                </label>
+                <select id="zoom-select" class="mdui-select mdui-textfield-input">
+                    <option value="1">
+                        <script>document.write(getI18n('original_size'))</script>
+                    </option>
+                    <option value="2">2x</option>
+                </select>
+            </div>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label">
+                    <script>document.write(getI18n('device_name'))</script>
+                </label>
+                <input id="device-input" class="mdui-textfield-input" type="text" readonly />
+            </div>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label">
+                    <script>document.write(getI18n('time'))</script>
+                </label>
+                <input id="time-input" class="mdui-textfield-input" type="text" readonly />
+            </div>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label">
+                    <script>document.write(getI18n('lens_info'))</script>
+                </label>
+                <input id="lens-input" class="mdui-textfield-input" type="text" readonly />
+            </div>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+                <label class="mdui-textfield-label">
+                    <script>document.write(getI18n('location'))</script>
+                </label>
+                <input id="location-input" class="mdui-textfield-input" type="text" readonly />
+            </div>
+            <div class="mdui-typo">
+                <a onclick="getLocation()" style="cursor: pointer;">
+                    <script>document.write(getI18n('use_current_location'))</script>
+                </a> | <a onclick="matchModel()" style="cursor: pointer;">
+                    <script>document.write(getI18n('match_model'))</script>
+                </a>
+            </div>
         </div>
-        <div class="mdui-textfield">
-            <label class="mdui-textfield-label">
-                <script>document.write(getI18n('image_scale'))</script>
-            </label>
-            <select id="zoom-select" class="mdui-select mdui-textfield-input">
-                <option value="1">
-                    <script>document.write(getI18n('original_size'))</script>
-                </option>
-                <option value="2">2x</option>
-            </select>
+        <br />
+        <div class="mdui-float-right">
+            <button id="preview-btn" class="mdui-btn mdui-ripple" onclick="drawImage(true)" disabled>
+                <script>document.write(getI18n('preview'))</script>
+            </button>
+            <button id="save-btn" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-pink" onclick="drawImage()"
+                disabled>
+                <script>document.write(getI18n('save'))</script>
+            </button>
         </div>
-        <div class="mdui-textfield mdui-textfield-floating-label">
-            <label class="mdui-textfield-label">
-                <script>document.write(getI18n('device_name'))</script>
-            </label>
-            <input id="device-input" class="mdui-textfield-input" type="text" readonly />
+        <br /><br /><br />
+        <div class="mdui-typo" style="opacity: .8;">
+            <p style="margin: 0;">
+                <script>document.write(getI18n('not_for_commercial_use'))</script>
+            </p>
+            <p style="margin: 0;">© LTDSA 2022 | <a onclick="getContributors()"
+                    style="cursor: pointer;">Contributors</a>
+            </p>
         </div>
-        <div class="mdui-textfield mdui-textfield-floating-label">
-            <label class="mdui-textfield-label">
-                <script>document.write(getI18n('time'))</script>
-            </label>
-            <input id="time-input" class="mdui-textfield-input" type="text" readonly />
-        </div>
-        <div class="mdui-textfield mdui-textfield-floating-label">
-            <label class="mdui-textfield-label">
-                <script>document.write(getI18n('lens_info'))</script>
-            </label>
-            <input id="lens-input" class="mdui-textfield-input" type="text" readonly />
-        </div>
-        <div class="mdui-textfield mdui-textfield-floating-label">
-            <label class="mdui-textfield-label">
-                <script>document.write(getI18n('location'))</script>
-            </label>
-            <input id="location-input" class="mdui-textfield-input" type="text" readonly />
-        </div>
-        <div class="mdui-typo">
-            <a onclick="getLocation()" style="cursor: pointer;">
-                <script>document.write(getI18n('use_current_location'))</script>
-            </a> | <a onclick="matchModel()" style="cursor: pointer;">
-                <script>document.write(getI18n('match_model'))</script>
-            </a>
-        </div>
-    </div>
-    <br />
-    <div class="mdui-float-right">
-        <button id="preview-btn" class="mdui-btn mdui-ripple" onclick="drawImage(true)" disabled>
-            <script>document.write(getI18n('preview'))</script>
-        </button>
-        <button id="save-btn" class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-pink" onclick="drawImage()"
-            disabled>
-            <script>document.write(getI18n('save'))</script>
-        </button>
-    </div>
-    <br /><br /><br />
-    <div class="mdui-typo" style="opacity: .8;">
-        <p style="margin: 0;">
-            <script>document.write(getI18n('not_for_commercial_use'))</script>
-        </p>
-        <p style="margin: 0;">© LTDSA 2022 | <a onclick="getContributors()" style="cursor: pointer;">Contributors</a>
-        </p>
-    </div>
-    <br />
+        <br />
     </div>
     <script>
         var $ = mdui.$;
